--- a/cmp-databinding-start/src/app/cockpit/cockpit.component.html
+++ b/cmp-databinding-start/src/app/cockpit/cockpit.component.html
@@ -2,17 +2,19 @@
   <div class="col-xs-12">
     <p>Add new Servers or blueprints!</p>
     <label for="serverName">Server Name</label>
-    <input id="serverName" class="form-control" [(ngModel)]="newServerName">
+    <!--<input id="serverName" class="form-control" [(ngModel)]="newServerName">-->
+    <input id="serverName" class="form-control" #serverNameInput>
     <label for="serverContent">Server Content</label>
-    <input id="serverContent" class="form-control" [(ngModel)]="newServerContent">
+    <!--<input id="serverContent" class="form-control" [(ngModel)]="newServerContent">-->
+    <input id="serverContent" class="form-control" #serverContentInput>
     <br>
     <button
       class="btn btn-primary"
-      (click)="onAddServer()">Add Server
+      (click)="onAddServer(serverNameInput)">Add Server
     </button>
     <button
       class="btn btn-primary"
-      (click)="onAddBlueprint()">Add Server Blueprint
+      (click)="onAddBlueprint(serverNameInput)">Add Server Blueprint
     </button>
   </div>
 </div>
