--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -3,6 +3,11 @@
   ></app-cockpit>
   <hr>
   <div class="row">
-    <app-server *ngFor="let element of serverElements" [serverData]="element"></app-server>
+    <app-server *ngFor="let element of serverElements" [serverData]="element">
+      <p>
+        <strong *ngIf="element.type === 'server'" style="color: red">{{ element.content }}</strong>
+        <em *ngIf="element.type === 'blueprint'">{{ element.content }}</em>
+      </p>
+    </app-server>
   </div>
 </div>
