--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -44,7 +44,12 @@
         <div class="form-group">
           <textarea name="questionAnswer" rows="3" class="form-control" [(ngModel)]="questionAnswer"></textarea>
         </div>
-        <p>{{ questionAnswer }}</p>
+        <p>Your replay: {{ questionAnswer }}</p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input type="radio" name="gender" ngModel [value]="gender" required>{{ gender }}
+          </label>
+        </div>
         <button
           class="btn btn-primary"
           type="submit"
