--- a/forms-reactive-start/src/app/app.component.html
+++ b/forms-reactive-start/src/app/app.component.html
@@ -9,6 +9,9 @@
             id="username"
             class="form-control"
             formControlName="username">
+          <span class="help-block"
+            *ngIf="signupForm.get('username').invalid && signupForm.get('username').touched">
+            Please enter a valid username!</span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
@@ -17,6 +20,9 @@
             id="email"
             class="form-control"
             formControlName="email">
+          <span class="help-block"
+                *ngIf="signupForm.get('email').invalid && signupForm.get('email').touched">
+            Please enter a valid email!</span>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
@@ -26,7 +32,10 @@
               formControlName="gender">{{ gender }}
           </label>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <span class="help-block"
+              *ngIf="signupForm.invalid && signupForm.touched">
+            Please enter a valid data!</span>
+        <button class="btn btn-primary" type="submit" [disabled]="signupForm.invalid">Submit</button>
       </form>
     </div>
   </div>
