--- a/prj-basics-final/prj-basics-final/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/prj-basics-final/prj-basics-final/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,8 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button type="submit" class="btn btn-success"
+            [disabled]="recipeForm.invalid">Save</button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -54,7 +55,8 @@
           <div class="row"
                *ngFor="let ingredient of recipeForm.get('ingredients').controls;
                   let i = index"
-               [formGroupName]="i">
+               [formGroupName]="i"
+              style="margin-bottom: 10px;">
             <div class="col-xs-8">
               <input
                 type="text"
@@ -69,6 +71,12 @@
             </div>
             <div class="col-xs-2">
               <button class="btn btn-danger btn-block">X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
             </div>
           </div>
         </div>
