--- a/prj-basics-final/prj-basics-final/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/prj-basics-final/prj-basics-final/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,7 +19,7 @@
       <ul class="dropdown-menu">
         <li (click)="toShoppingList()"><a style="cursor: pointer">To Shopping List</a></li>
         <li (click)="onEdit()"><a style="cursor: pointer">Edit Recipe</a></li>
-        <li (click)="onEdit()"><a style="cursor: pointer">Delete Recipe</a></li>
+        <li (click)="onDelete()"><a style="cursor: pointer">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
