--- a/prj-basics-final/prj-basics-final/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/prj-basics-final/prj-basics-final/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success"
             [disabled]="recipeForm.invalid">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div class="row">
@@ -27,14 +27,15 @@
             <input
               type="url"
               id="imageUrl"
-              formControlName="imgUrl"
-              class="form-control">
+              formControlName="imagePath"
+              class="form-control"
+              #imagePath>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imagePath.value" class="img-responsive">
         </div>
       </div>
       <div class="row">
@@ -70,7 +71,10 @@
                 formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger btn-block">X</button>
+              <button
+                type="button"
+                class="btn btn-danger btn-block"
+                (click)="onDeleteIngredient(i)">X</button>
             </div>
           </div>
           <hr>
